# Samgtu-new

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  keyboards.py  main.py  process.py
src/database/: __init__.py  database.py  migration.py  models.py
src/handlers/: __init__.py  common.py  fallback.py  registration.py  schedule.py  service.py  startup.py
src/legacy/: db_parser.py  groups_to_db.py
src/parse/: __init__.py  datacleaner.py  parse.py
src/services/: __init__.py  notification_service.py  registration_service.py  schedule_service.py  service_classes.py
src/utils/: __init__.py  logger.py  middleware.py  monitoring.py
