[project]
name = "bot-remake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
[tool.pyright]
extraPaths = ["src"]
enviroments = ["sys_platform == 'linux'"]
dependencies = [
    "aiofiles==25.1.0",
    "aiogram==3.26.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "annotated-types==0.7.0",
    "asyncpg>=0.31.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "cachetools==7.0.5",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cssselect==1.4.0",
    "datarecorder==3.6.2",
    "dotenv>=0.9.9",
    "downloadkit==2.0.7",
    "drissionpage>=4.1.1.4",
    "et-xmlfile==2.0.0",
    "filelock==3.25.1",
    "frozenlist==1.8.0",
    "geojson==3.2.0",
    "idna==3.11",
    "loguru>=0.7.3",
    "lxml==6.0.2",
    "magic-filter==1.0.12",
    "multidict==6.7.1",
    "numpy==2.4.2",
    "openpyxl==3.1.5",
    "pandas==3.0.0",
    "propcache==0.4.1",
    "psutil==7.2.2",
    "psycopg-pool",
    "psycopg[binary]>=3.3.4",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyowm==3.5.0",
    "pyown==0.4.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "requests-file==3.0.1",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "sqlalchemy>=2.0.50",
    "tldextract==5.3.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "websocket-client==1.9.0",
    "yarl==1.22.0",
]
