[project]
name = "bot-remake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram==3.26.0",
    "aiohttp==3.13.3",
    "aiosqlite==0.22.1",
    "asyncpg>=0.31.0",
    "beautifulsoup4==4.14.3",
    "cachetools==7.0.5",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "psycopg-pool",
    "psycopg[binary,pool]>=3.3.4",
    "requests==2.32.5",
    "requests-file==3.0.1",
    "sqlalchemy>=2.0.50",
]

[tool.pyright]
extraPaths = ["src"]
enviroments = ["sys_platform == 'linux'"]

[tool.ruff]
line-length = 100
